--- a/android/app/src/main/res/drawable/background_splash.xml
+++ b/android/app/src/main/res/drawable/background_splash.xml
@@ -7,7 +7,7 @@
     <item
         android:width="150dp"
         android:height="150dp"
-        android:drawable="@mipmap/splash_icon"
+        android:drawable="@mipmap/ic_launcher"
         android:gravity="center" />
 
 </layer-list>
